feat: implementd the CRUD methods for locais record
